Add ScheduledJobExecutor and rewire PollingService around job runs
ScheduledJobExecutor is the new home for claim -> fetch -> classify ->
dispatch-gate -> prepare/dispatch, including the triage-SLA threshold
grouping that used to live in PollingService. A transient fetch failure
records RETRYING audit rows and schedules a retry; a permanent one (or
retries exhausted) records FAILED rows immediately, fixing the bug where
an Octane outage produced zero audit rows. Subscribers are reloaded live
from the DB on every attempt so a retry never emails someone who
unsubscribed in the meantime.

PollingService is now thin: it only groups due subscribers into
(workspace, filter) job instances, supersedes older runs for the same
pair, and creates+executes the job run. runNow creates a MANUAL run
instead of calling the notification pipeline directly.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_011hdDcxR6kau6KK5VJFd9a4